--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     ]
   },
   "devDependencies": {
-    "tailwindcss": "^3.4.1"
+    "tailwindcss": "^3.4.1",
+    "@babel/plugin-proposal-private-property-in-object": "^1.0.0"
   }
 }
