--- a/package.json
+++ b/package.json
@@ -52,7 +52,6 @@
     ]
   },
   "devDependencies": {
-    "tailwindcss": "^3.4.1",
-    "@babel/plugin-proposal-private-property-in-object": "^1.0.0"
+    "tailwindcss": "^3.4.1"
   }
 }
