--- a/.env.production
+++ b/.env.production
@@ -1,2 +1,2 @@
 # REACT_APP_BACKEND_URI="http://localhost:8081"
-REACT_APP_BACKEND_URI="https://quiz-backend-cayu.onrender.com"
+REACT_APP_BACKEND_URI=
